--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,18 @@ pytest==2.8.3
 # https://pypi.python.org/pypi/pytest-cov
 # Pytest plugin for measuring coverage.
 pytest-cov==2.2.0
+
+
+# HTTP library in python, handle http requests/responses
+# http://docs.python-requests.org/en/latest/
+requests
+
+
+# python library for parsing and pulling data out of HTML and XML files
+# http://www.crummy.com/software/BeautifulSoup/bs4/doc/
+BeautifulSoup4
+
+
+# library for testing, replace parts of your system under test with mock objects and make assertions about how they have been used
+# https://docs.python.org/3/library/unittest.mock.html
+mock
